<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20sp"
    android:elevation="6dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="12dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/data"
                android:fontFamily="@font/avenirblack"
                android:textColor="@color/colorAccent"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/all_data"
                android:text="@string/data_template"
                android:fontFamily="@font/avenirmedium"
                android:textColor="@color/grey"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:text="@string/soup"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/avenirblack"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/all_fel_1"
            android:text="@string/menu_3"
            android:textColor="@color/grey"
            android:fontFamily="@font/avenirmedium"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/main_course"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/avenirblack"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/all_fel_2"
            android:text="@string/menu_6"
            android:textColor="@color/grey"
            android:fontFamily="@font/avenirmedium"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/decor"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/avenirblack"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/all_decor"
            android:text="@string/menu_8"
            android:textColor="@color/grey"
            android:fontFamily="@font/avenirmedium"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.v7.widget.CardView>