<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="45dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="45dp"
        android:elevation="6dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:id="@+id/card_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:id="@+id/menu_soup"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="@font/avenirblack"
                android:gravity="center_vertical"
                android:text="@string/soup"
                android:textColor="@color/colorAccent"
                android:textAppearance="?android:textAppearanceMedium"
                />

            <RelativeLayout
                android:id="@+id/layout_1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/soup_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenirlight"
                    android:text="@string/menu_1"
                    android:textColor="@color/faded_grey"
                    android:textAppearance="?android:textAppearanceLarge" />

                <ImageView
                    android:id="@+id/image_1"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/show"
                    android:src="@drawable/checkbox" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/soup_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenirlight"
                    android:text="@string/menu_2"
                    android:textColor="@color/faded_grey"
                    android:textAppearance="?android:textAppearanceLarge" />

                <ImageView
                    android:id="@+id/image_2"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/show"
                    android:src="@drawable/checkbox" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_3"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/soup_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenirlight"
                    android:text="@string/menu_3"
                    android:textColor="@color/faded_grey"
                    android:textAppearance="?android:textAppearanceLarge" />

                <ImageView
                    android:id="@+id/image_3"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/show"
                    android:src="@drawable/checkbox" />

            </RelativeLayout>

            <TextView
                android:id="@+id/main_course"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="@font/avenirblack"
                android:gravity="center_vertical"
                android:text="@string/main_course"
                android:textColor="@color/colorAccent"
                android:textAppearance="?android:textAppearanceMedium"/>

            <RelativeLayout
                android:id="@+id/layout_4"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenirlight"
                    android:text="@string/menu_4"
                    android:textColor="@color/faded_grey"
                    android:textAppearance="?android:textAppearanceLarge"/>

                <ImageView
                    android:id="@+id/image_4"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/show"
                    android:src="@drawable/checkbox" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_5"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenirlight"
                    android:text="@string/menu_5"
                    android:textColor="@color/faded_grey"
                    android:textAppearance="?android:textAppearanceLarge" />

                <ImageView
                    android:id="@+id/image_5"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/show"
                    android:src="@drawable/checkbox" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_6"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenirlight"
                    android:text="@string/menu_6"
                    android:textColor="@color/faded_grey"
                    android:textAppearance="?android:textAppearanceLarge" />

                <ImageView
                    android:id="@+id/image_6"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/show"
                    android:src="@drawable/checkbox" />

            </RelativeLayout>

            <TextView
                android:id="@+id/garnituri"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="@font/avenirblack"
                android:gravity="center_vertical"
                android:text="@string/decor"
                android:textColor="@color/colorAccent"
                android:textAppearance="?android:textAppearanceMedium" />

            <RelativeLayout
                android:id="@+id/layout_7"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/decor_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenirlight"
                    android:text="@string/menu_7"
                    android:textColor="@color/faded_grey"
                    android:textAppearance="?android:textAppearanceLarge" />

                <ImageView
                    android:id="@+id/image_7"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/show"
                    android:src="@drawable/checkbox" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_8"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/decor_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/avenirlight"
                    android:text="@string/menu_8"
                    android:textColor="@color/faded_grey"
                    android:textAppearance="?android:textAppearanceLarge" />

                <ImageView
                    android:id="@+id/image_8"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/show"
                    android:src="@drawable/checkbox" />

            </RelativeLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fb"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/red"
        app:borderWidth="0dp"
        android:src="@drawable/share"
        app:elevation="6dp"
        app:fabSize="normal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"/>


</RelativeLayout>